--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="newsModule">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Movies</title>
+  <base href="/" />
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.min.js"></script>
   <script src="Scripts/script.js"></script>
   <link rel="stylesheet" href="Styles/styles.css">
 </head>
-<body ng-app="moviesModule" ng-controller="moviesController">
+<body>
   <header>Header</header>
   <nav>
     <a ng-href="home">Home</a>
