--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <header>Header</header>
   <nav>
-    <a ng-href="home">Home</a>
-    <a ng-href="about">About</a>
+    <a href="home">Home</a>
+    <a href="about">About</a>
   </nav>
   <main>
     <ng-view></ng-view>
